--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Ever wanted a multiplayer arcade cabinet experience, but with your phone as a controller?",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node indes.js"
   },
   "repository": {
     "type": "git",
