--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Ever wanted a multiplayer arcade cabinet experience, but with your phone as a controller?",
   "main": "index.js",
   "scripts": {
-    "start": "node indes.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
