Add websockets, Display ships when players connect, fill player ship

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "socket.io": "^2.0.4",
     "standard": "^10.0.3"
   }
 }
