--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "url": "https://github.com/AdmiralPotato/websockets-arcade/issues"
   },
   "homepage": "https://github.com/AdmiralPotato/websockets-arcade#readme",
+  "engines": {
+    "node" : "8.x"
+  },
   "dependencies": {
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
