--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "gl-matrix": "^2.4.0",
     "morgan": "^1.9.0",
     "nipplejs": "^0.6.8",
     "socket.io": "^2.0.4",
