--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gl-matrix": "^2.4.0",
     "morgan": "^1.9.0",
     "nipplejs": "^0.6.8",
+    "point-in-polygon": "^1.0.1",
     "socket.io": "^2.0.4",
     "vue": "^2.5.3"
   },
