--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "homepage": "https://github.com/AdmiralPotato/websockets-arcade#readme",
   "engines": {
-    "node": "14.x"
+    "node": ">=14.x"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
@@ -42,11 +42,11 @@
     "nipplejs": "^0.9.0",
     "point-in-polygon": "^1.1.0",
     "socket.io": "^4.2.0",
-    "vue": "^2.6.14"
+    "vue": "^2.7.16"
   },
   "devDependencies": {
     "eslint-config-standard": "^16.0.3",
-    "nodemon": "^2.0.13",
+    "nodemon": "^3.1.10",
     "standard": "^16.0.3"
   }
 }
