--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "healthcheck": "node healthcheck.js",
     "dev": "nodemon --inspect ./index.js",
     "test": "standard"
   },
